--- a/update/src/main/resources/static/css/board/boardList.css
+++ b/update/src/main/resources/static/css/board/boardList.css
@@ -49,7 +49,7 @@
     white-space: nowrap;
     font-size: 20px;
     font-weight: bold;
-    color: black;
+    color: #0085FF;
     font-weight: bold;
 }
 
