--- a/update/src/main/resources/templates/board/shotboard/shotBoardInsert.html
+++ b/update/src/main/resources/templates/board/shotboard/shotBoardInsert.html
@@ -26,6 +26,13 @@
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
 
     <title>Title</title>
+    <style>
+        .title1 img{
+            width: 300px;
+            height: 200px;
+        }
+
+    </style>
 </head>
 <body>
 
@@ -33,7 +40,7 @@
 <div th:replace="~{/layout/header :: header-basic}"></div>
 <main class="container mt-5">
     <div class="title1">
-        <h1>MINSOME</h1>
+        <img class="ms-2 me-1" src="/img/boardImg3.png">
     </div>
     <section class="section_div">
 
