--- a/update/src/main/resources/templates/board/shotboard/shotBoardUpdate.html
+++ b/update/src/main/resources/templates/board/shotboard/shotBoardUpdate.html
@@ -32,8 +32,16 @@
 
             $("#btn-update").on("click", function () {
                 const frm = $("#frm")[0];
-                frm.action = "/board/update";
-                frm.submit();
+                var file = $("#file").val();
+
+                if(file==null) {
+
+                    frm.action = "/board/update";
+                    frm.submit();
+                }else{
+                    frm.action= "/board/image/update";
+                    frm.submit();
+                }
             });
 
             $("#btn-delete").on("click", function () {
@@ -122,9 +130,7 @@
 
         </form>
 
-        <form id="del" method="post">
 
-        </form>
 
 
     </section>
